--- a/app/src/main/res/layout/header_neer_me.xml
+++ b/app/src/main/res/layout/header_neer_me.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:scrollbars="none">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:scrollbars="none"
+    android:layout_marginBottom="10dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
@@ -12,7 +16,7 @@
             android:layout_height="wrap_content"
             android:text="@string/t_t_c"
             android:layout_gravity="center"
-            android:id="@+id/btnHeaderNear"
+            android:id="@+id/btnChangAll"
             android:onClick="clickToViewListByHeaderNear"
             android:textSize="10dp"/>
         <com.google.android.material.button.MaterialButton
@@ -20,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Uy tín"
-            android:id="@id/btnHeaderNear"
+
             android:onClick="clickToViewListBtnHeader"
             android:layout_gravity="center"
             android:textSize="10dp"/>
@@ -29,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="View đẹp"
-            android:id="@id/btnHeaderNear"
+
             android:onClick="clickToViewListBtnHeader"
             android:layout_gravity="center"
             android:textSize="10dp"/>
@@ -38,7 +42,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sang trọng"
-            android:id="@id/btnHeaderNear"
             android:onClick="clickToViewListBtnHeader"
             android:layout_gravity="center"
             android:textSize="10dp"/>
@@ -48,7 +51,6 @@
             android:layout_height="wrap_content"
             android:text="Giảm giá"
             android:layout_gravity="center"
-            android:id="@id/btnHeaderNear"
             android:onClick="clickToViewListBtnHeader"
             android:textSize="10dp"/>
         <com.google.android.material.button.MaterialButton
@@ -57,7 +59,6 @@
             android:layout_height="wrap_content"
             android:text="Khu lien hợp"
             android:layout_gravity="center"
-            android:id="@id/btnHeaderNear"
             android:onClick="clickToViewListBtnHeader"
             android:textSize="10dp"/>
     </LinearLayout>
