--- a/app/src/main/res/menu/side_nav_items.xml
+++ b/app/src/main/res/menu/side_nav_items.xml
@@ -5,12 +5,12 @@
 
     <item
         android:id="@+id/side_nav_trang_chu"
-        android:icon="@drawable/baseline_account_box_24"
+        android:icon="@drawable/baseline_home_24"
         android:title="Trang chủ" />
 
     <item
         android:id="@+id/side_nav_danh_muc"
-        android:icon="@drawable/baseline_account_box_24"
+        android:icon="@drawable/baseline_category_24"
         android:title="Danh mục" />
 
 
@@ -21,7 +21,7 @@
 
     <item
         android:id="@+id/side_nav_dang_xuat"
-        android:icon="@drawable/baseline_account_box_24"
+        android:icon="@drawable/logout"
         android:title="Đăng xuất" />
 
 </menu>
