--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#fafafa</color>
-    <color name="colorGreen">#dcedc8</color>
+    <color name="colorGreen">#DCEDC8</color>
     <color name="colorRed">#d50000</color>
     <color name="colorXam">#e0e0e0</color>
 </resources>
