--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/colorPrimary"
+    android:background="#FFFFFF"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -12,12 +12,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/putin" />
+        app:srcCompat="@drawable/ava" />
 
     <TextView
         android:layout_width="match_parent"
@@ -25,15 +27,17 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="ID: 123456789"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="15dp"/>
+        android:textSize="15dp"
+
+        android:textColor="@color/colorBlack"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phan Van Putin"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        />
+        android:text="Đen Văn Vâu"
+        android:textColor="@color/colorBlack"
+        android:textSize="15dp"
+         />
 
 </LinearLayout>
