--- a/app/src/main/res/layout/fragment_near_me.xml
+++ b/app/src/main/res/layout/fragment_near_me.xml
@@ -19,11 +19,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
-                android:id="@+id/nearMeChange"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-                <include layout="@layout/near_me_list"/>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/frame_nearMe"
+                    >
+                </FrameLayout>
             </LinearLayout>
         </ScrollView>
         <TextView
