Edit near me layout

--- a/app/src/main/res/layout/fragment_uu_dai_hot__near_me.xml
+++ b/app/src/main/res/layout/fragment_uu_dai_hot__near_me.xml
@@ -6,6 +6,6 @@
     android:orientation="vertical"
     tools:context=".UuDaiHot_NearMe">
 
-    <include layout="@layout/near_me_list"/>
+    <include layout="@layout/uudaihot_list"/>
 
 </LinearLayout>
