--- a/app/src/main/res/layout/near_me_list.xml
+++ b/app/src/main/res/layout/near_me_list.xml
@@ -4,14 +4,17 @@
     android:layout_height="wrap_content"
     android:columnCount="1"
     android:background="@color/colorGreen"
-    android:paddingLeft="10dp">
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp">
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="120dp"
         android:layout_columnWeight="1"
         android:orientation="horizontal"
         android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        >
         <LinearLayout
             android:layout_width="150dp"
             android:layout_height="120dp"
