--- a/app/src/main/res/layout/uudaihot_list.xml
+++ b/app/src/main/res/layout/uudaihot_list.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     android:columnCount="1"
     android:background="@color/colorGreen"
-    android:paddingLeft="10dp">
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:padding="10dp">
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="120dp"
