DatBan time picker

--- a/app/src/main/res/layout/activity_dat_ban.xml
+++ b/app/src/main/res/layout/activity_dat_ban.xml
@@ -216,7 +216,7 @@
                         <TextView
                             android:layout_width="250dp"
                             android:layout_height="35dp"
-                            android:text="Thứ hai\n17/06/2019"
+                            android:id="@+id/txtSetDate"
                             android:gravity="center"
                             />
                     </LinearLayout>
