--- a/app/src/main/res/layout/activity_dat_ban.xml
+++ b/app/src/main/res/layout/activity_dat_ban.xml
@@ -312,7 +312,8 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_navigate_before_black_24dp"
-                        android:layout_gravity="center" />
+                        android:layout_gravity="center"
+                        android:id="@+id/imgDes"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -320,8 +321,8 @@
                         <TextView
                             android:layout_width="250dp"
                             android:layout_height="35dp"
-                            android:text="8"
                             android:gravity="center"
+                            android:id="@+id/txtSoNguoi"
                             />
                     </LinearLayout>
                     <ImageView
@@ -329,6 +330,7 @@
                         android:layout_height="30dp"
                         android:src="@drawable/ic_navigate_next_black_24dp"
                         android:layout_gravity="center"
+                        android:id="@+id/imgAsc"
                         />
                 </LinearLayout>
             </LinearLayout>
