--- a/app/src/main/res/layout/activity_goi_ycho_ban.xml
+++ b/app/src/main/res/layout/activity_goi_ycho_ban.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/girl02"
+            android:src="@drawable/billiard4"
             android:clickable="true"
             android:onClick="clickToDatBanImg"
             android:id="@+id/imgGoiYChoBan"/>
@@ -82,7 +82,7 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/girl04"/>
+            android:src="@drawable/billiard1"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -143,7 +143,7 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/girl05"/>
+            android:src="@drawable/billiard2"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -204,7 +204,7 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/girl07"/>
+            android:src="@drawable/expensive_billiard6"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -265,7 +265,7 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/girl02"/>
+            android:src="@drawable/expensive_billiard2"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
