--- a/app/src/main/res/layout/footer.xml
+++ b/app/src/main/res/layout/footer.xml
@@ -48,7 +48,7 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="150dp"
-        android:src="@drawable/anhbia"
+        android:src="@drawable/tablebida"
         android:scaleType="centerCrop"/>
 
 </LinearLayout>
