--- a/app/src/main/res/layout/tatca_list.xml
+++ b/app/src/main/res/layout/tatca_list.xml
@@ -105,11 +105,12 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="130dp"
         android:layout_columnWeight="1"
         android:orientation="horizontal"
         android:background="@color/colorWhite"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:paddingTop="10dp">
         <LinearLayout
             android:layout_width="150dp"
             android:layout_height="120dp"
@@ -123,9 +124,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/expensive_billiard3"
-                android:id="@id/imgDetail"
+                android:src="@drawable/girl04"
                 android:clickable="true"
+                android:id="@id/imgDetail"
                 android:onClick="clicktoviewdetailByNear"/>
             <TextView
                 android:layout_width="fill_parent"
@@ -195,7 +196,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/t_b_n"
                 android:layout_gravity="center"
-                android:id="@id/btnDatBan"
                 android:onClick="clickToDatBan"/>
         </LinearLayout>
     </LinearLayout>
